--- a/public/css/Date.css
+++ b/public/css/Date.css
@@ -10,7 +10,7 @@
     display:grid;
     background-color: white;
     width: auto;
-    
+    font-family: 'Anton', sans-serif;
 }
 
 #whichDayLoc{
@@ -28,4 +28,5 @@
     transform:scale(1.5,1);
     position:relative;
     left:13px;
+    bottom: -2px;
 }
